--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -30,7 +30,7 @@
             android:ems="10"
             android:gravity="start|top"
             android:hint="title"
-            android:inputType="textMultiLine"
+            android:inputType="text|textMultiLine"
             android:maxLength="10"
             android:textColorHint="#090909"
             android:textSize="22sp"
@@ -86,7 +86,6 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:ems="10"
             android:hint="click me to change"
             android:inputType="text"
             android:minHeight="48dp"
